--- a/.travis.yml
+++ b/.travis.yml
@@ -68,6 +68,17 @@ after_script:
 jobs:
   include:
 # ARM
+# # x86_64 Linux, No wallet
+    - stage: test
+      name: 'x86_64 Linux  [GOAL: install]  [bionic]  [no wallet]'
+      env: >-
+        HOST=x86_64-unknown-linux-gnu
+        PACKAGES="python3-zmq"
+        DEP_OPTS="NO_WALLET=1"
+        RUN_TESTS=false
+        GOAL="install"
+        BITCOIN_CONFIG="--enable-glibc-back-compat --enable-reduce-exports"
+        
     - stage: test
       env: >-
         HOST=arm-linux-gnueabihf
