--- a/.travis.yml
+++ b/.travis.yml
@@ -73,7 +73,7 @@ jobs:
       name: 'x86_64 Linux  [GOAL: install]  [bionic]  [no wallet]'
       env: >-
         HOST=x86_64-unknown-linux-gnu
-        PACKAGES="python3-zmq"
+        PACKAGES="python3-zmq libdb5.3++-dev"
         DEP_OPTS="NO_WALLET=1"
         RUN_TESTS=false
         GOAL="install"
