--- a/.travis.yml
+++ b/.travis.yml
@@ -40,11 +40,7 @@ install:
     - travis_retry DOCKER_EXEC apt-get update
     - travis_retry DOCKER_EXEC apt-get install --no-install-recommends --no-upgrade -qq $PACKAGES $DOCKER_PACKAGES
 before_script:
-<<<<<<< HEAD
     - DOCKER_EXEC echo \> \$HOME/.veles  # Make sure default datadir does not exist and is never read by creating a dummy file
-=======
-    - DOCKER_EXEC echo \> \$HOME/.fxtc  # Make sure default datadir does not exist and is never read by creating a dummy file
->>>>>>> fxtc-0.17
     - mkdir -p depends/SDKs depends/sdk-sources
     - if [ -n "$OSX_SDK" -a ! -f depends/sdk-sources/MacOSX${OSX_SDK}.sdk.tar.gz ]; then curl --location --fail $SDK_URL/MacOSX${OSX_SDK}.sdk.tar.gz -o depends/sdk-sources/MacOSX${OSX_SDK}.sdk.tar.gz; fi
     - if [ -n "$OSX_SDK" -a -f depends/sdk-sources/MacOSX${OSX_SDK}.sdk.tar.gz ]; then tar -C depends/SDKs -xf depends/sdk-sources/MacOSX${OSX_SDK}.sdk.tar.gz; fi
@@ -59,7 +55,7 @@ script:
     - mkdir build && cd build
     - BEGIN_FOLD configure; DOCKER_EXEC ../configure --cache-file=config.cache $BITCOIN_CONFIG_ALL $BITCOIN_CONFIG || ( cat config.log && false); END_FOLD
     - BEGIN_FOLD distdir; DOCKER_EXEC make distdir VERSION=$HOST; END_FOLD
-    - cd fxtc-$HOST
+    - cd bitcoin-$HOST
     - BEGIN_FOLD configure; DOCKER_EXEC ./configure --cache-file=../config.cache $BITCOIN_CONFIG_ALL $BITCOIN_CONFIG || ( cat config.log && false); END_FOLD
     - BEGIN_FOLD build; DOCKER_EXEC make $MAKEJOBS $GOAL || ( echo "Build failure. Verbose build follows." && DOCKER_EXEC make $GOAL V=1 ; false ); END_FOLD
     - if [ "$RUN_TESTS" = "true" ]; then BEGIN_FOLD unit-tests; DOCKER_EXEC LD_LIBRARY_PATH=$TRAVIS_BUILD_DIR/depends/$HOST/lib make $MAKEJOBS check VERBOSE=1; END_FOLD; fi
@@ -138,13 +134,8 @@ jobs:
       name: 'x86_64 Linux  [GOAL: install]  [bionic]  [no wallet]'
       env: >-
         HOST=x86_64-unknown-linux-gnu
-<<<<<<< HEAD
         PACKAGES="python3-zmq"
         DEP_OPTS="NO_WALLET=1 NO_QT=1"
-=======
-        PACKAGES="python3"
-        DEP_OPTS="NO_WALLET=1"
->>>>>>> fxtc-0.17
         RUN_TESTS=false
         GOAL="install"
         BITCOIN_CONFIG="--enable-glibc-back-compat --enable-reduce-exports"
@@ -175,11 +166,7 @@ jobs:
         - test/lint/check-doc.py
         - test/lint/check-rpc-mappings.py .
         - test/lint/lint-all.sh
-<<<<<<< HEAD
         - if [ "$TRAVIS_REPO_SLUG" = "Velescore/Veles" -a "$TRAVIS_EVENT_TYPE" = "cron" ]; then
-=======
-        - if [ "$TRAVIS_REPO_SLUG" = "fxtc/fxtc" -a "$TRAVIS_EVENT_TYPE" = "cron" ]; then
->>>>>>> fxtc-0.17
               while read LINE; do travis_retry gpg --keyserver hkp://subset.pool.sks-keyservers.net --recv-keys $LINE; done < contrib/verify-commits/trusted-keys &&
               travis_wait 50 contrib/verify-commits/verify-commits.py;
           fi
