--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -1,6 +1,6 @@
 # Copyright (c) 2013-2016 The Bitcoin Core developers
 # Copyright (c) 2014-2017 The Dash Core developers
-# Copyright (c) 2018-2019 FXTC developers
+# Copyright (c) 2018 FXTC developers
 # Copyright (c) 2018-2019 The Veles Core developers
 # Distributed under the MIT software license, see the accompanying
 # file COPYING or http://www.opensource.org/licenses/mit-license.php.
@@ -385,7 +385,11 @@ if ENABLE_WALLET
 BITCOIN_QT_CPP += $(BITCOIN_QT_WALLET_CPP)
 endif
 
-RES_IMAGES =
+# VELES BEGIN
+RES_IMAGES = \
+  qt/res/images/splash.png \
+  qt/res/images/splash_testnet.png
+# VELES END
 
 RES_MOVIES = $(wildcard $(srcdir)/qt/res/movies/spinner-*.png)
 
