Qt: Removed references to unused image resources

--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -1,6 +1,7 @@
 # Copyright (c) 2013-2016 The Bitcoin Core developers
 # Copyright (c) 2014-2017 The Dash Core developers
-# Copyright (c) 2018 FXTC developers
+# Copyright (c) 2018-2019 FXTC developers
+# Copyright (c) 2018-2019 The Veles Core developers
 # Distributed under the MIT software license, see the accompanying
 # file COPYING or http://www.opensource.org/licenses/mit-license.php.
 
@@ -257,12 +258,8 @@ BITCOIN_QT_H += \
 RES_ICONS = \
   qt/res/icons/add.png \
   qt/res/icons/address-book.png \
-  qt/res/icons/about.png \
   qt/res/icons/about_veles.png \
   qt/res/icons/about_qt.png \
-  qt/res/icons/bitcoin.ico \
-  qt/res/icons/bitcoin_testnet.ico \
-  qt/res/icons/bitcoin.png \
   qt/res/icons/chevron.png \
   qt/res/icons/clock1.png \
   qt/res/icons/clock2.png \
