--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -261,6 +261,57 @@ RES_ICONS = \
   qt/res/icons/veles.png \
   qt/res/icons/chevron.png \
   qt/res/icons/warning.png \
+  qt/res/icons/bitcoinTheme/add.png \
+  qt/res/icons/bitcoinTheme/address-book.png \
+  qt/res/icons/bitcoinTheme/about_veles.png \
+  qt/res/icons/bitcoinTheme/about_qt.png \
+  qt/res/icons/bitcoinTheme/clock1.png \
+  qt/res/icons/bitcoinTheme/clock2.png \
+  qt/res/icons/bitcoinTheme/clock3.png \
+  qt/res/icons/bitcoinTheme/clock4.png \
+  qt/res/icons/bitcoinTheme/clock5.png \
+  qt/res/icons/bitcoinTheme/configure.png \
+  qt/res/icons/bitcoinTheme/connect0.png \
+  qt/res/icons/bitcoinTheme/connect1.png \
+  qt/res/icons/bitcoinTheme/connect2.png \
+  qt/res/icons/bitcoinTheme/connect3.png \
+  qt/res/icons/bitcoinTheme/connect4.png \
+  qt/res/icons/bitcoinTheme/debugwindow.png \
+  qt/res/icons/bitcoinTheme/edit.png \
+  qt/res/icons/bitcoinTheme/editcopy.png \
+  qt/res/icons/bitcoinTheme/editpaste.png \
+  qt/res/icons/bitcoinTheme/export.png \
+  qt/res/icons/bitcoinTheme/eye.png \
+  qt/res/icons/bitcoinTheme/eye_minus.png \
+  qt/res/icons/bitcoinTheme/eye_plus.png \
+  qt/res/icons/bitcoinTheme/filesave.png \
+  qt/res/icons/bitcoinTheme/fontbigger.png \
+  qt/res/icons/bitcoinTheme/fontsmaller.png \
+  qt/res/icons/bitcoinTheme/hd_disabled.png \
+  qt/res/icons/bitcoinTheme/hd_enabled.png \
+  qt/res/icons/bitcoinTheme/history.png \
+  qt/res/icons/bitcoinTheme/info.png \
+  qt/res/icons/bitcoinTheme/key.png \
+  qt/res/icons/bitcoinTheme/lock_closed.png \
+  qt/res/icons/bitcoinTheme/lock_open.png \
+  qt/res/icons/bitcoinTheme/network_disabled.png \
+  qt/res/icons/bitcoinTheme/open.png \
+  qt/res/icons/bitcoinTheme/overview.png \
+  qt/res/icons/bitcoinTheme/proxy.png \
+  qt/res/icons/bitcoinTheme/quit.png \
+  qt/res/icons/bitcoinTheme/receive.png \
+  qt/res/icons/bitcoinTheme/remove.png \
+  qt/res/icons/bitcoinTheme/send.png \
+  qt/res/icons/bitcoinTheme/synced.png \
+  qt/res/icons/bitcoinTheme/transaction0.png \
+  qt/res/icons/bitcoinTheme/transaction2.png \
+  qt/res/icons/bitcoinTheme/transaction_abandoned.png \
+  qt/res/icons/bitcoinTheme/transaction_conflicted.png \
+  qt/res/icons/bitcoinTheme/tx_inout.png \
+  qt/res/icons/bitcoinTheme/tx_input.png \
+  qt/res/icons/bitcoinTheme/tx_output.png \
+  qt/res/icons/bitcoinTheme/tx_mined.png \
+  qt/res/icons/bitcoinTheme/verify.png \
   qt/res/icons/lightTheme/add.png \
   qt/res/icons/lightTheme/address-book.png \
   qt/res/icons/lightTheme/about_veles.png \
@@ -417,6 +468,7 @@ RES_ICONS = \
 
 # Dash
 RES_ICONS += \
+  qt/res/icons/bitcoinTheme/masternodes.png \
   qt/res/icons/lightTheme/masternodes.png \
   qt/res/icons/darkTheme/masternodes.png \
   qt/res/icons/velesTheme/masternodes.png
@@ -491,6 +543,10 @@ endif
 
 # VELES BEGIN
 RES_IMAGES = \
+  qt/res/images/bitcoinTheme/splash.png \
+  qt/res/images/bitcoinTheme/splash_testnet.png \
+  qt/res/images/bitcoinTheme/splash_prerelease.png \
+  qt/res/images/bitcoinTheme/header_bg.png \
   qt/res/images/darkTheme/splash.png \
   qt/res/images/darkTheme/splash_testnet.png \
   qt/res/images/darkTheme/splash_prerelease.png \
@@ -506,6 +562,7 @@ RES_IMAGES = \
   qt/res/images/velesTheme/bg-pattern.png
 
 RES_CSS = \
+  qt/res/css/bitcoinTheme.css \
   qt/res/css/darkTheme.css \
   qt/res/css/velesTheme.css \
   qt/res/css/lightTheme.css
