--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -404,7 +404,17 @@ BITCOIN_QT_CPP += $(BITCOIN_QT_WALLET_BIP70_CPP)
 endif # ENABLE_BIP70
 endif # ENABLE_WALLET
 
-RES_IMAGES =
+# VELES BEGIN
+RES_IMAGES = \
+  qt/res/images/splash.png \
+  qt/res/images/splash_testnet.png \
+  qt/res/images/splash_prerelease.png \
+  qt/res/images/header_bg.png
+
+RES_CSS = \
+  qt/res/css/dark.css \
+  qt/res/css/light.css
+# VELES END 
 
 RES_MOVIES = $(wildcard $(srcdir)/qt/res/movies/spinner-*.png)
 
